# dunai

./: .gitignore  .travis.yml  CHANGELOG  DPSwitchB.hs  HLint.hs  LICENSE  README  README.md  TODO  Test.hs  bearriver.cabal  cabal.project  dunai.cabal  stack.yaml
dunai/: CHANGELOG  README.md  dunai.cabal  stack.yaml
dunai-examples/: testing.hs
dunai-examples/bouncingball/: BouncingBall.hs  bearriver-examples-bouncingball.cabal
dunai-examples/classicfrp/: GTest.hs  Test.hs  classicfrp.cabal
dunai-examples/discrete/: WXStep.hs  WXText.hs
dunai-examples/keerahails/: WXText.hs
dunai-examples/list/: BouncingBall.hs  bearriver-examples-bouncingball-list.cabal
dunai-examples/paper/: ChangeLog.md  dunai-examples-paper.cabal
dunai-examples/paper/src/: DunaiExamplesExtensibleAFRP.hs  DunaiExamplesMonads.hs  DunaiExamplesReactiveStreamsAndSinks.lhs  DunaiExamplesReactiveValues.hs  FRP.lhs
dunai-examples/reversefrpzoo/: README.md
dunai-examples/reversefrpzoo/wormholes/: ChangeLog.md  dunai-frp-wormholes.cabal
dunai-examples/reversefrpzoo/wormholes/src/Data/MonadicStreamFunction/: Wormhole.hs
dunai-examples/taggingmonad/: taggingmonad.cabal
dunai-examples/taggingmonad/Control/Monad/: SamplingMonad.hs  TaggingMonad.hs
dunai-examples/taggingmonad/Data/Maybe/: Util.hs
dunai-examples/timetransform/: TimeTransform.hs
dunai-frp-bearriver/: CHANGELOG  LICENSE  bearriver.cabal
dunai-frp-bearriver/src/FRP/: BearRiver.hs  Yampa.hs
dunai-frp-bearriver/src/FRP/BearRiver/: Arrow.hs  Basic.hs  Conditional.hs  Delays.hs  Event.hs  EventS.hs  Hybrid.hs  Integration.hs  InternalCore.hs  List.hs  Loop.hs  Monad.hs  Random.hs  Scan.hs  Simulation.hs  Switches.hs  Task.hs  Time.hs  VectorSpace.hs
dunai-frp-bearriver/src/FRP/Yampa/: VectorSpace.hs
dunai-frp-bearriver/tests/: RegressionTests.hs
dunai-test/: CHANGELOG  dunai-test.cabal
dunai-test/src/FRP/Dunai/: Debug.hs  LTLFuture.hs  LTLPast.hs  QuickCheck.hs  Stream.hs
dunai/benchmarks/: Bench.hs
dunai/src/Control/Arrow/: Util.hs
dunai/src/Control/Monad/Trans/: MSF.hs
dunai/src/Control/Monad/Trans/MSF/: Except.hs  List.hs  Maybe.hs  RWS.hs  Random.hs  Reader.hs  State.hs  Writer.hs
dunai/src/Data/: MonadicStreamFunction.hs
dunai/src/Data/MonadicStreamFunction/: Async.hs  CausalCommutative.hs  Core.hs  InternalCore.hs  Parallel.hs  ReactHandle.hs  Util.hs
dunai/src/Data/MonadicStreamFunction/Core/: Internal.hs
dunai/src/Data/MonadicStreamFunction/Instances/: ArrowChoice.hs  ArrowLoop.hs  ArrowPlus.hs  Num.hs  Profunctor.hs  Ultrametric.hs  VectorSpace.hs
dunai/src/Data/MonadicStreamFunction/Util/: Async.hs  Debug.hs  Delay.hs  Effect.hs  Fold.hs  MonadicStream.hs  Parallel.hs  ReactHandle.hs
dunai/tests/: HaddockCoverage.hs
examples/FRP/: BearRiver.hs
examples/basic-examples/: BasicExamples.hs  LICENSE  basic-examples.cabal
examples/bearriver/: .bearriver.cabal.swp  bearriver.cabal
examples/bearriver/src/FRP/: BearRiver.hs  Yampa.hs
examples/bearriver/src/FRP/BearRiver/: List.hs
examples/bearriver/src/FRP/Yampa/: Point2.hs  Point3.hs  Vector2.hs  Vector3.hs  VectorSpace.hs
examples/boucingball/: bearriver-examples-bouncingball.cabal
examples/bouncingball/: BouncingBall.hs  bearriver-examples-bouncingball.cabal
examples/ccd/: Main.hs
examples/classicfrp/: .gitignore  GTest.hs  LICENSE  Test.hs  classicfrp.cabal
examples/discrete/: LICENSE  WXStep.hs  WXText.hs  dunai-examples-discreterp-wxhaskell.cabal
examples/exceptions/: Main.hs  dunai-exceptions.cabal
examples/haskanoid/: haskanoid.cabal
examples/haskanoid/src/: Game.hs  Input.hs
examples/haskanoid/src/Control/Extra/: Monad.hs
examples/keerahails/: .gitignore  LICENSE  WXText.hs  dunai-examples-keerahails-wxhaskell.cabal
examples/list/: BouncingBall.hs  bearriver-examples-bouncingball-list.cabal
examples/paper/: LICENSE  dunai-examples-paper.cabal
examples/paper/src/: DunaiExamplesConcepts.lhs  DunaiExamplesExtensibleAFRP.hs  DunaiExamplesMonads.hs  DunaiExamplesReactiveStreamsAndSinks.lhs  FRP.lhs  frp.lhs  monads.lhs  reactiveprogramming.lhs
examples/pulsetest/: PulseTest.hs  pulsetest.cabal
examples/reversefrpzoo/wormholes/: LICENSE
examples/reversefrpzoo/wormholes/src/Data/MonadicStreamFunction/: Wormhole.hs
examples/taggingmonad/: taggingmonad.cabal
examples/taggingmonad/Control/Monad/: SamplingMonad.hs  TaggingMonad.hs
examples/timetransform/: TimeTransform.hs
extensions/dunai-test/: dunai-test.cabal
extensions/dunai-test/src/FRP/Dunai/: Debug.hs  LTLFuture.hs  LTLPast.hs  QuickCheck.hs  Stream.hs
extensions/dunai-testing/: dunai-testing.cabal
extensions/dunai-testing/src/FRP/Dunai/: Debug.hs  LTLFuture.hs  LTLPast.hs  QuickCheck.hs  Stream.hs
src/Control/Arrow/: Util.hs
src/Control/Monad/: SamplingMonad.hs
src/Control/Monad/Trans/: MSF.hs  MStreamF.hs
src/Control/Monad/Trans/MSF/: Except.hs  GenLift.hs  List.hs  Maybe.hs  RWS.hs  Random.hs  Reader.hs  State.hs  Writer.hs
src/Data/: MonadicStream.hs  MonadicStreamFunction.hs  VectorSpace.hs
src/Data/Maybe/: Util.hs
src/Data/MonadicStreamFunction/: ArrowChoice.hs  ArrowLoop.hs  ArrowPlus.hs  Async.hs  CausalCommutative.hs  Core.hs  Instances.hs  InternalCore.hs  Parallel.hs  ReactHandle.hs  Ultrametric.hs  Util.hs  Wormhole.hs
src/Data/MonadicStreamFunction/Instances/: ArrowChoice.hs  ArrowLoop.hs  ArrowPlus.hs  Num.hs  Ultrametric.hs  VectorSpace.hs
src/Data/Tuple/: Util.hs
src/Data/VectorSpace/: Fractional.hs  Instances.hs  Primitive.hs  Specific.hs  Tuples.hs
tests/: HLint.hs  HLintMain.hs  RegressionTests.hs
workflows/: Dockerfile-ghc-7.10.3  Dockerfile-ghc-7.6.3  Dockerfile-ghc-7.8.4  Dockerfile-ghc-8.8.4  Dockerfile-ghc-9.2  Dockerfile-ghc-9.4  Dockerfile-ghc-9.6  Dockerfile-ghc-9.8
