name:                dunai
version:             0.1.0.0
synopsis:            Generalised reactive framework supporting classic, arrowized and monadic FRP.
-- description:
license:             AllRightsReserved
license-file:        LICENSE
author:              Ivan Perez, Manuel Bärenz
maintainer:          ivan.perez@keera.co.uk
-- copyright:
category:            Reactivity, FRP
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:   Control.Monad.Trans.MStreamF
                     Data.MonadicStreamFunction
                     Data.MonadicStreamFunction.Core
                     Data.MonadicStreamFunction.ArrowChoice
                     Data.MonadicStreamFunction.ArrowLoop
                     Data.MonadicStreamFunction.ArrowPlus
                     Data.MonadicStreamFunction.Instances
                     Data.MonadicStreamFunction.Instances.Num
                     Data.MonadicStreamFunction.Instances.VectorSpace
                     Data.MonadicStreamFunction.Parallel

		     -- Auxiliary definitions
                     Data.VectorSpace
                     Data.VectorSpace.Instances
                     Data.VectorSpace.Tuples
                     Data.VectorSpace.Specific

  other-modules:     Control.Arrow.Util
                     Data.Tuple.Util

  build-depends:     base >=4.6 && < 5,
                     transformers,
                     transformers-base
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-unused-do-bind

executable dunai-examples-bearriver-bouncingball
  main-is: BouncingBall.hs
  hs-source-dirs:    examples
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-unused-do-bind
  cpp-options:       -DBEARRIVER
  other-modules:     FRP.BearRiver
  build-depends:     base >=4.6 && < 5,
                     transformers, mtl,
                     SDL,
                     SDL-gfx,
                     dunai,
                     Yampa

executable dunai-examples-bearriver-bouncingball-yampa
  main-is: BouncingBall.hs
  hs-source-dirs:    examples
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-unused-do-bind
  build-depends:     base >=4.6 && < 5,
                     SDL,
                     SDL-gfx,
                     Yampa

source-repository head
  type:     git
  location: git@bitbucket.org:iperezdominguez/dunai.git
