name:                dunai
version:             0.1.0.0
synopsis:            Generalised reactive framework supporting classic, arrowized and monadic FRP.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ivan Perez, Manuel Bärenz
maintainer:          ivan.perez@keera.co.uk
-- copyright:
category:            Reactivity, FRP
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual: True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual: True

library
  exposed-modules:   Control.Monad.Trans.MStreamF
                     Data.MonadicStreamFunction
                     Data.MonadicStreamFunction.Core
                     Data.MonadicStreamFunction.ArrowChoice
                     Data.MonadicStreamFunction.ArrowLoop
                     Data.MonadicStreamFunction.ArrowPlus
                     Data.MonadicStreamFunction.Instances
                     Data.MonadicStreamFunction.Instances.Num
                     Data.MonadicStreamFunction.Instances.VectorSpace
                     Data.MonadicStreamFunction.Parallel

		     -- Auxiliary definitions
                     Data.VectorSpace
                     Data.VectorSpace.Instances
                     Data.VectorSpace.Tuples
                     Data.VectorSpace.Specific

  other-modules:     Control.Arrow.Util
                     Data.Tuple.Util

  build-depends:     base >=4.6 && < 5,
                     transformers,
                     transformers-base
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-unused-do-bind

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  hs-source-dirs: tests
  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
      base,
      hlint >= 1.7

-- Verify that the code is thoroughly documented
test-suite haddock-coverage
  type: exitcode-stdio-1.0
  main-is: HaddockCoverage.hs
  ghc-options: -Wall
  hs-source-dirs: tests

  if !flag(test-doc-coverage)
    buildable: False
  else
    build-depends:
      base >= 4 && < 5,
      directory,
      filepath,
      process,
      regex-posix

source-repository head
  type:     git
  location: git@bitbucket.org:iperezdominguez/dunai.git
