-- Copyright (c) 2016 - Ivan Perez and Manuel B채renz - All rights reserved
--
-- Redistribution and use in source and binary forms, with or without
-- modification, are permitted provided that the following conditions are met:
--
--     * Redistributions of source code must retain the above copyright
--       notice, this list of conditions and the following disclaimer.
--
--     * Redistributions in binary form must reproduce the above
--       copyright notice, this list of conditions and the following
--       disclaimer in the documentation and/or other materials provided
--       with the distribution.
--
--     * Neither the name of Ivan Perez and Manuel B채renz nor the names of
--       other contributors may be used to endorse or promote products derived
--       from this software without specific prior written permission.
--
-- THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
-- "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-- LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
-- A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
-- OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
-- SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
-- LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
-- DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
-- THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-- (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
-- OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
cabal-version: >= 1.10
build-type:    Simple

name:          bearriver
version:       0.13.6
author:        Ivan Perez, Manuel B채renz
maintainer:    ivan.perez@keera.co.uk
homepage:      https://github.com/ivanperez-keera/dunai
license:       BSD3
license-file:  LICENSE
copyright:     Copyright (c) 2016 - Ivan Perez and Manuel B채renz
category:      FRP
synopsis:      FRP Yampa replacement implemented with Monadic Stream Functions.
description:
  <https://hackage.haskell.org/package/Yampa Yampa> is a popular Functional
  Reactive Programming (FRP) implementation that has been used extensively for
  all kinds of applications, including robotics and games.
  .
  <https://dl.acm.org/doi/10.1145/2976002.2976010 Monadic Stream Functions> are
  a new abstraction for data processors that combine arrows and monads. The
  library <https://hackage.haskell.org/package/dunai dunai> provides a default
  implementation.
  .
  Bearriver (a tributary to the Yampa river) provides the same API as Yampa,
  but implemented using dunai underneath. The goal is to facilitate
  understanding what's different about Yampa, and other FRP and Reactive
  Programming libraries, by creating wrappers around dunai defined precisely by
  those differences.
  .
  Because dunai is particularly fast, especially with optimizations enabled,
  this implementation is faster than traditional Yampa for medium-sized and
  large applications.


extra-source-files:
  CHANGELOG


source-repository head
  type:     git
  location: git@github.com:ivanperez-keera/dunai.git
  subdir:   dunai-frp-bearriver


library
  exposed-modules:
    FRP.BearRiver
    FRP.Yampa

  build-depends:
      base >= 4.6 && <5
    , dunai >= 0.6.0 && < 0.10
    , MonadRandom         >= 0.2   && < 0.6
    , mtl                 >= 2.1.2 && < 2.3
    , simple-affine-space >= 0.1   && < 0.2
    , transformers >= 0.3 && < 0.7

  default-language:
    Haskell2010

  hs-source-dirs:
    src/
