-- Copyright (c) 2017 - Ivan Perez - All rights reserved
--
-- Redistribution and use in source and binary forms, with or without
-- modification, are permitted provided that the following conditions are met:
--
--     * Redistributions of source code must retain the above copyright
--       notice, this list of conditions and the following disclaimer.
--
--     * Redistributions in binary form must reproduce the above
--       copyright notice, this list of conditions and the following
--       disclaimer in the documentation and/or other materials provided
--       with the distribution.
--
--     * Neither the name of Ivan Perez nor the names of other contributors may
--       be used to endorse or promote products derived from this software
--       without specific prior written permission.
--
-- THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
-- "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-- LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
-- A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
-- OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
-- SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
-- LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
-- DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
-- THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-- (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
-- OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
cabal-version: >= 1.10
build-type:    Simple

name:          dunai-test
version:       0.13.1
author:        Ivan Perez
maintainer:    ivan.perez@keera.co.uk
homepage:      https://github.com/ivanperez-keera/dunai
license:       BSD3
license-file:  LICENSE
copyright:     Copyright (c) 2017 - Ivan Perez
category:      Testing
synopsis:      Testing library for Dunai
description:
  Testing and debugging library for Dunai.
  .
  It contains:
  .
  * Debugging signal functions using "Debug.Trace".
  * A definition of Temporal Predicates based on LTL.
  * Monitoring signal functions with ptLTL using Signal Predicates.
  * A definition of Streams, and a Stream manipulation API.
  * Signal/stream generators for QuickCheck.
  .
  A detailed explanation of these ideas is included in the ICFP 2017 paper
  <https://dl.acm.org/citation.cfm?id=3110246 Testing and Debugging Functional Reactive Programming>.


x-curation: uncurated


extra-source-files:
  CHANGELOG


source-repository head
  type:     git
  location: git@github.com:ivanperez-keera/dunai.git
  subdir:   dunai-test


library
  exposed-modules:
    FRP.Dunai.Debug
    FRP.Dunai.LTLFuture
    FRP.Dunai.LTLPast
    FRP.Dunai.QuickCheck
    FRP.Dunai.Stream

  build-depends:
      base >= 4 && < 5
    , dunai >= 0.5 && < 0.14
    , normaldistribution >= 1.0  && < 1.2
    , QuickCheck         >= 2.12 && < 2.15

  default-language:
    Haskell2010

  hs-source-dirs:
    src
