name:                bearriver
version:             0.13.1.1
synopsis:            A replacement of Yampa based on Monadic Stream Functions.
description:         A Yampa replacement built using Dunai.
homepage:            keera.co.uk
license:             BSD3
license-file:        LICENSE
author:              Ivan Perez and Manuel Bärenz
maintainer:          ivan.perez@keera.co.uk
-- copyright:
category:            FRP
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     FRP.Yampa,
                       FRP.BearRiver

  build-depends:       base >=4.6 && <5, transformers >=0.3, mtl, dunai >= 0.6.0 && < 0.7, MonadRandom, simple-affine-space
  hs-source-dirs:      src/
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@github.com:ivanperez-keera/dunai.git
