name:                bearriver-examples-bouncingball
version:             0.1.0.0
synopsis:            Example of a bouncing ball that works both in Yampa and in BearRiver.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ivan Perez, Manuel Bärenz
maintainer:          ivan.perez@keera.co.uk
-- copyright:
category:            Reactivity, FRP
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable dunai-examples-bearriver-bouncingball
  main-is: BouncingBall.hs
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-unused-do-bind
  cpp-options:       -DBEARRIVER
  build-depends:     base >=4.6 && < 5,
                     SDL,
                     SDL-gfx,
                     bearriver

                     -- transformers, mtl,

executable dunai-examples-bearriver-bouncingball-yampa
  main-is: BouncingBall.hs
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-unused-do-bind
  build-depends:     base >=4.6 && < 5,
                     SDL,
                     SDL-gfx,
                     Yampa

source-repository head
  type:     git
  location: git@bitbucket.org:iperezdominguez/dunai.git
