name:                dunai-examples-discreterp-wxhaskell
version:             0.1.0.0
synopsis:            An example using MStreamFs with a step clock and WX UIs
license:             AllRightsReserved
license-file:        LICENSE
author:              Ivan Perez
maintainer:          ivan.perez@keera.co.uk
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable dunai-examples-discreterp-wxhaskell
  main-is:             WXText.hs
  build-depends:       base >=4.7 && <4.8, dunai, wx
  default-language:    Haskell2010
