name:                dunai-examples-keerahails-wxhaskell
version:             0.1.0.1
synopsis:            An example using Monadic Stream Functions
                     with Reactive Values and WX UIs
license:             BSD3
license-file:        LICENSE
author:              Ivan Perez
maintainer:          ivan.perez@keera.co.uk
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable dunai-examples-keerahails-wxhaskell
  main-is:             WXText.hs
  build-depends:       base >=4.6 && <5, dunai, wx
  default-language:    Haskell2010
