name:                bearriver-examples-boucingball-list
version:             0.1.0.0
synopsis:            Example of a bouncing ball that splits in BearRiver.
-- description:
license:             AllRightsReserved
license-file:        LICENSE
author:              Ivan Perez, Manuel Bärenz
maintainer:          ivan.perez@keera.co.uk
-- copyright:
category:            Reactivity, FRP
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable dunai-examples-bearriver-bouncingball-list
  main-is: BouncingBall.hs
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-unused-do-bind
  build-depends:     base >=4.6 && < 5,
                     SDL,
                     SDL-gfx,
                     list-t,
                     bearriver,
                     dunai,
                     transformers,
                     mtl

source-repository head
  type:     git
  location: git@bitbucket.org:iperezdominguez/dunai.git
