name:                dunai-testing
version:             0.1.0.0
synopsis:            Testing library for Dunai
-- description:
homepage:            http://github.com/ivanperez-keera/dunai
license:             BSD3
license-file:        LICENSE
author:              Ivan Perez
maintainer:          ivan.perez@keera.co.uk
-- copyright:
category:            Testing
build-type:          Simple
extra-source-files:  ChangeLog.md

cabal-version:       >=1.10

library
  exposed-modules:     FRP.Dunai.Debug
                       FRP.Dunai.LTLFuture
                       FRP.Dunai.LTLPast
                       FRP.Dunai.Stream
                       FRP.Dunai.QuickCheck
  build-depends:       base >=4 && <5, dunai, QuickCheck, normaldistribution
  hs-source-dirs:      src
  default-language:    Haskell2010
